# src/main/resources/openapi.yaml
@@ -5,9 +5,9 @@ info:
   license:
     name: MIT License
     url: https://opensource.org/licenses/MIT
-  version: "1.2"
+  version: "1.3"
 servers:
-  - url: http://127.0.0.1:8080
+  - url: http://localhost:8080
     description: Generated server url
 tags:
   - name: SnailMailSender
@@ -77,6 +77,10 @@ components:
           type: string
           description: The attachment content type
           example: text/plain
+        sendAsWindowedEnvelope:
+          type: boolean
+          description: If the letter to send should be placed in a windowed envelope
+          example: true
       description: Attachments
     SendSnailMailRequest:
       required:
@@ -99,6 +103,10 @@ components:
     Problem:
       type: object
       properties:
+        title:
+          type: string
+        detail:
+          type: string
         instance:
           type: string
           format: uri
@@ -111,10 +119,6 @@ components:
             type: object
         status:
           $ref: '#/components/schemas/StatusType'
-        title:
-          type: string
-        detail:
-          type: string
     StatusType:
       type: object
       properties:
